--- a/poc_camera/poc_camera.csproj
+++ b/poc_camera/poc_camera.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>ed127dce-7f82-4278-a7ef-11297874d69a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
